--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         chatInput.disabled = true;
 
         try {
-          const res = await fetch("https://she-deserves-production.up.railway.app/api/chat", {
+          const res = await fetch("https://shedesrvesse-1.onrender.com", {
 
             method: "POST",
             headers: { "Content-Type": "application/json" },
