--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
         chatInput.disabled = true;
 
         try {
-          const res = await fetch("https://shedesrvesse-1.onrender.com", {
+          const res = await fetch("https://shedesrvesse-1.onrender.com/api/chat", {
+
 
             method: "POST",
             headers: { "Content-Type": "application/json" },
