--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
     const chatStatus = document.getElementById("chat-status");
 
     const history = [];
-    const API_URL = "https://shedesrvesse-1.onrender.com/api/chat"; // Your Render backend URL
+    const API_URL = "https://shedesrvesse-1-1.onrender.com"; // Your Render backend URL
 
     function escapeHtml(unsafe) {
       return unsafe
