--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
     const history = [];
     // Your Render backend URL - make sure this is correct!
-    const API_BASE_URL = "https://shedesrvesse-1-1.onrender.com";
+    const API_BASE_URL = "https://shedesrvesse-1.onrender.com/health";
     
     console.log("🚀 Chat app initialized");
     console.log("📡 Backend URL:", API_BASE_URL);
